Actualizada memoria Conceptos teóricos.

--- a/Documentación/bibliografia.bib
+++ b/Documentación/bibliografia.bib
@@ -85,3 +85,12 @@
 @misc{fotoAR4, title={Vuforia Studio}, url={https://www.designtechproducts-ptc-ar.com/vuforia-studio}, journal={Vuforia Studio is Authoring Tool for Augmented Reality Experiences.}}
 
 @misc{marta_app, title={KUdan AR Case study}, url={https://www.xlsoft.com/en/products/kudan/showcase/marta.html}, journal={エクセルソフト Arction}}
+
+ @misc{ARhistory, title={Augmented Reality: A Comprehensive History (Part 1)}, url={https://blog.vertebrae.com/history-augmented-reality-1}, journal={Vertebrae Blog}, author={Motte, Stefanie}}
+ 
+  @misc{EspadaDamocles, title={El primer simulador VR de la historia tenía forma de recreativa, y se inventó a finales de los 50}, url={https://www.xataka.com/historia-tecnologica/el-primer-simulador-vr-de-la-historia-tenia-forma-de-recreativa-y-se-invento-a-finales-de-los-50}, journal={Xataka}, publisher={Xataka}, author={FM, Yúbal}, year={2018}, month={Apr}}
+  
+  @article{ARevolution,
+  	title={AR evolution towards smart contact lens: A hit or a miss?},
+  	author={Peethambar, Manu}
+  }
