Planificación temporal Sprint 17

--- a/Documentación/tex/A_Plan_proyecto.tex
+++ b/Documentación/tex/A_Plan_proyecto.tex
@@ -90,6 +90,11 @@ Otro punto a investigar se trata de añadir alguna de las otras funciones de rea
  
  Para este sprint el objetivo mas principal es darle un pulido a la aplicación en la interfaz y demás para que se acerque mas al lo que debería ser el producto final. Otra mejora en la aplicación será implementar  la posibilidad de configurar desde el menú que tipo de realidad aumentada usar y poder ajustar otros posibles parámetros.  También seguir completando y mejorando la documentación, para este sprint me centraré en el punto de la historia de la realidad aumentada y comenzaré ha construir la tabla comparativa de las herramientas.
  
+ \subsection{Sprint 17 (27/05/2020 - 03/06/2020)}
+ En la semana de este sprint hemos decido poner por objetivos, seguir mejorando la aplicación, mejorando la interfaz y mas aspectos, acercándole a lo que sería el diseño final, pues aún hay botones y otros elementos que no tienen uso, o que en algún momento su único propósito era de realizar pruebas de funcionalidades o diseños. Otro de los objetivos tratará de añadir mínimo un segundo modelo de una planta, para que la aplicación pueda mostrar mas modelos. Respecto al crecimiento de las plantas también se mejorará las fases, pues ahora mismo cada fase tiene las mismas condiciones, será recomendable que cada fase estuviese ajustada a lo que podrían ser sus condiciones reales.
+ 
+ En la aplicación cuando en el menú se cambia entre menú normal y en realidad aumentada, el menú siempre vuelve a la página principal, se pone por objetivo, conseguir que cuando se cambie de tipo se conserve  la fase del menú. Es decir que si estoy en las opciones del menú, cuando cambie al modo de realidad aumentada siga en las opciones.
+ Seguir mejorando los apartados de la documentación.
 \section{Estudio de viabilidad}
 
 \subsection{Viabilidad económica}
